Restart pipewire with keybind

--- a/.config/hypr/hyprland/execs.conf
+++ b/.config/hypr/hyprland/execs.conf
@@ -1,5 +1,5 @@
 # Bar, wallpaper
-exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
+exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep -c ~/.config/gammastep/config.ini
 exec-once = waybar
 exec-once = hyprpaper
 
