--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -4,7 +4,7 @@
 #
 
 # Reload Hyprland
-bindr = Super, R, exec, hyprctl reload; hyprctl hyprpaper reload; killall waybar ydotool; waybar &
+bindr = Super, R, exec, hyprctl reload; hyprctl hyprpaper reload; killall waybar ydotool; systemctl --user restart pipewire pipewire-pulse wireplumber; waybar &
 
 # Audio
 bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
@@ -28,7 +28,6 @@ bindl = ,Print,exec,grim - | wl-copy # Screenshot >> clipboard
 
 # Clipboard history
 bind = Super, C, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
-
 
 # OCR
 bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png" # Screen snip to text >> clipboard
